# neurokairos

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-image.yml
image/: README.md  config.template
image/stage-neurokairos-client/: EXPORT_IMAGE
image/stage-neurokairos-client/00-config-chrony-client/: 00-run.sh
image/stage-neurokairos-client/00-config-chrony-client/files/: chrony.conf
image/stage-neurokairos-common/00-install-sender/: 00-run.sh
image/stage-neurokairos-common/00-install-sender/files/: .gitkeep
image/stage-neurokairos-common/01-system-tweaks/: 00-packages  00-run.sh
image/stage-neurokairos-server/: EXPORT_IMAGE
image/stage-neurokairos-server/00-config-gps-server/: 00-packages  00-run.sh
image/stage-neurokairos-server/00-config-gps-server/files/: chrony.conf  gpsd
neurokairos/decoders/: irig.py
raspberry_pi/docs/: rpi-gps-server.md  setup-guide.md
raspberry_pi/scripts/: install.sh  install_chrony_client.sh  run_benchmark.sh  uninstall.sh
raspberry_pi/sender/: irig_sender.c
raspberry_pi/systemd/: irig-sender.service
tests/: test_irig.py
